<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Joetz Vakanties</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Instellingen</string>
    <string name="nieuwsoverzicht">Nieuwsoverzicht</string>
    <string name="newsfeed">Foto\'s van jou zijn toegevoegd aan actiekamp\nJoetz is cool! - blog\nNieuwe vakantie beschikbaar!</string>
    <string name="title_activity_vacation_overview">Vakanties</string>
    <string name="vacation_title_sort_btn">Titel ^</string>
    <string name="vacation_date_sort_btn">Datum ^</string>
    <string name="search_vacation">Zoek een vakantie</string>
    <string name="logged_in_name">Jan Mertens</string>
    <string name="filter_vacations">Filter vakanties</string>
    <string name="action_login">Login</string>
    <string name="title_activity_specific_vacation_view">SpecificVacationView</string>
    <string name="inschrijven">Inschrijven</string>
    <string name="description">Extra Informatie</string>
    <string name="price">Prijs</string>
    <string name="thumbsup">Rate thumbs up</string>
    <string name="thumbsdown">Rate thumbs down</string>
    <string name="title_activity_vacation_filter">Filteropties</string>
    <string name="extensive_filter_options">Uitgebreide Filteropties</string>
    <string name="vacation_for_ages">Vakanties voor leeftijden:</string>
    <string name="to_lbl">tot</string>
    <string name="from_lbl">Van</string>
    <string name="search_with_filter">Zoeken!</string>
    <string name="promotional_text">Beschrijving</string>
    <string name="destination">Bestemming</string>
    <string name="age">Leeftijd</string>
    <string name="when">Wanneer</string>
    <string name="transportation">Vervoer</string>
    <string name="amount_of_participants">Aantal deelnemers</string>
    <string name="discount_price">JOETZ-Sterprijs</string>
    <string name="tax_deductable">Fiscaal aftrekbaar</string>
    <string name="registreren">Registreer</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Wachtwoord</string>
    <string name="username_hint">Gebruikersnaam</string>
    <string name="enter">Enter</string>
    <string name="error_invalid_password">Wachtwoord fout</string>
    <string name="error_field_required">Verplicht</string>
    <string name="error_invalid_email">Ongeldig emailadres</string>
    <string name="error_incorrect_password">Foutief wachtwoord</string>
    <string name="title_login">Inloggen</string>
    <string name="naam_moeder">Naam moeder</string>
    <string name="voornaam_moeder">Voornaam moeder</string>
    <string name="rrn_moeder">Rijksregisternummer moeder</string>
    <string name="naam_vader">Naam vader</string>
    <string name="voornaam_vader">Voornaam vader</string>
    <string name="rrn_vader">Rijksregisternummer vader</string>
    <string name="telNr">Telefoonnummer</string>
    <string name="email">E-mailadres</string>
    <string name="title_registreren">Registreren</string>
    <string name="bevestig_password">Bevestig wachtwoord</string>
    <string name="error_passwords_different">Wachtwoorden komen niet overeen</string>
    <string name="ja">Ja</string>
    <string name="nee">Nee</string>
    <string name="eenOuderLidBM">Eén ouder lid van Bond Moyson:</string>
    <string name="beideOudersLidBM">Beide ouders lid van Bond Moyson:</string>
    <string name="title_vacation_list">Vacations</string>
    <string name="title_vacation_detail">Vacation Detail</string>
    <string name="title_activity_vacations_list">VacationsListActivity</string>
    <string name="title_activity_vacation_detail">VacationDetailActivity</string>
    <string name="authorization_preference_file">hogent.hogentprojecteniii_groep10.AUTHORIZATION_PREFERENCE_FILE</string>
    <string name="authorization">Authorization</string>
    <string name="age_filter_setting">Filter op leeftijd</string>
    <string name="age_filter_key">age_filter_key</string>
    <string name="start_age_filter_key">start_age_filter_key</string>
    <string name="end_age_filter_key">end_age_filter_key</string>
    <string name="vacation_filter_preference_file">VACATION_FILTER_PREFERENCE_FILE</string>
    <string name="age_filter_checkbox_preference">age_filter_checkbox_preference</string>
    <string name="age_filter_start_age_preference">age_filter_start_age_preference</string>
    <string name="age_filter_end_age_preference">age_filter_end_age_preference</string>
    <string name="next">Next</string>
    <string name="title_activity_vacation_signup">Inschrijven voor</string>
    <string name="select_child">Wie wenst u in te schrijven voor deze vakantie?</string>
    <string name="add_child_spinner">Ik wens nog iemand in te schrijven</string>
    <string name="child_not_in_list">Mijn kind staat niet in het lijstje</string>
    <string name="go_to_billing">Ga verder naar de facturatie</string>
    <string name="title_activity_vacation_billing">Betalingsgegevens</string>
    <string name="firstname">Voornaam</string>
    <string name="lastname">Naam</string>
    <string name="billing_paying_person">Gegevens van de betalende persoon</string>
    <string name="billing_overview">Betalingsgegevens</string>
    <string name="billing_postal_address">Factuuradres</string>
    <string name="street_and_housenumber">Straat Huisnummer</string>
    <string name="postal_code_and_city">Postcode Gemeente</string>
    <string name="go_to_billing_overview">Ga naar het gegevensoverzicht</string>
    <string name="wrong_input_on_billing">Gelieve de invoer na te kijken!</string>
    <string name="title_activity_vacation_signup_overview">Overzicht</string>
    <string name="vacation">Vakantie</string>
    <string name="signup_overview_title">Titel: </string>
    <string name="signup_overview_date">Datum: </string>
    <string name="signup_overview_price_per_person">Prijs per persoon: </string>
    <string name="signup_overview_total_price">Totale prijs: </string>
    <string name="signup_overview_signups">Vakantiegangers</string>
    <string name="signup_overview_payment_details">Betalingsgegevens</string>
    <string name="signup_overview_paying_person">Betalingspersoon</string>
    <string name="cancel">Annuleren</string>
    <string name="signup_overview_signup">Inschrijven!</string>
    <string name="signup_overview_billing_address">Factuuradres</string>
    <string name="rrn">Rijksregisternummer</string>
    <string name="adres">Adres</string>
    <string name="gegevens_kind">Gegevens kind</string>
    <string name="straat">Straat</string>
    <string name="huisnummer">Huisnummer</string>
    <string name="postcode">Postcode</string>
    <string name="stad">Stad of gemeente</string>
    <string name="toevoegen">Toevoegen</string>
    <string name="gegevens_moeder">Gegevens moeder</string>
    <string name="gegevens_vader">Gegevens vader</string>
    <string name="accountgegevens">Accountgegevens</string>
    <string name="title_activity_vacation_photo_overview">Overzicht</string>
    <string name="go_to_photos_temp">Ga naar foto\'s</string>
    <string name="title_activity_vacation_photos">Foto\'s van </string>
    <string name="play_slideshow">Start de slideshow opnieuw</string>
    <string name="joetz_image_description">Joetz image</string>
    <string name="error_invalid_telephonenumber">Foutief telefoonnummer</string>
    <string name="error_invalid_rrn">Geen geldig rijsregisternummer</string>
    <string name="getting_vacations">Vakanties ophalen</string>
    <string name="please_wait">Even geduld aub</string>
    <string name="title_activity_add_child">Kind Toevoegen</string>
    <string name="action_logout">Uitloggen</string>
    <string name="title_activity_find_monitor">Zoek een begeleider</string>
    <string name="monitor_name">Naam</string>
    <string name="search">Zoeken!</string>
    <string name="find_monitor_help">Geef een deel of de volledige naam in van de monitor die je wilt zoeken.\nDruk daarna op zoeken!</string>
    <string name="naam">Naam</string>
    <string name="find_monitor">Monitor zoeken</string>
    <string name="monitor_not_found">De monitor is niet gevonden.</string>
    <string name="title_activity_main_settings">Instellingen</string>
    <string name="pref_title_logged_in_as_child">Kindermodus</string>
    <string name="pref_summary_logged_in_as_child">Als kind zie je niet alle zaken in de app.</string>
    <string name="specific_vavaction_more_information">Indien u meer informatie wilt, gelieve de app in oudermodus te bekijken! Klik hier om te veranderen!</string>
    <string name="no_internet_available">U heeft geen internetverbinding</string>
    <string name="error_existing_email">Account bestaat al</string>
    <string name="title_activity_activity_home_screen">activity_home_screen</string>
    <string name="title_activity_home_screen">home_screen</string>
    <string name="signup_signin">Registreren / Inloggen</string>
    <string name="not_logged_in">Je bent niet ingelogd!</string>
    <string name="no_child_selected">U heeft geen kind geselecteerd om in te schrijven!</string>
    <string name="no_space_available">Deze vakantie is helaas al volgeboekt</string>
    <string name="vacation_like_sort_btn">Likes ^</string>
    <string name="name_colon">Naam:</string>
    <string name="title_activity_registrations_overview">Inschrijvingen</string>
    <string name="max_children_achieved">Om nog een kind in te schrijven moet u hem/haar eerst aanmaken.\nSelecteer \"Mijn kind staat niet in het lijstje\".</string>
    <string name="geboortedatum">Geboortedatum</string>
    <string name="street">Straat</string>
    <string name="housenumber">Huisnummer</string>
    <string name="city">Gemeente</string>
    <string name="postal_code">Postcode</string>
    <string name="getting_signups">Registraties worden opgehaald</string>


</resources>
