<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/joetz"/>

        <EditText
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:textColorHint="@color/loginHints"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/email"
            android:imeActionLabel="@string/enter" />

        <EditText
            android:id="@+id/passWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:textColorHint="@color/loginHints"
            android:drawableStart="@drawable/password"
            android:imeActionLabel="@string/title_login"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="4dp"
            android:background="@drawable/custom_button"
            android:textColor="@android:color/white"
            android:text="@string/action_login"
            />
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="4dp"
            android:background="@drawable/custom_button"
            android:textColor="@android:color/white"
            android:text="@string/registreren"
            />

    </LinearLayout>
</ScrollView>

    <Button
        android:id="@+id/btnCancel_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="4dp"
        android:visibility="invisible"
        android:background="@drawable/custom_button"
        android:textColor="@android:color/white"
        android:text="@string/cancel"
        android:layout_gravity="center_vertical"
        />

    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
/>
</LinearLayout>
