<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    tools:context="hogent.hogentprojecteniii_groep10.VacationOverview" >

    <item android:id="@+id/action_search"
        android:title="@string/search_vacation"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="always"
        android:actionViewClass="android.widget.SearchView" />
    <item android:id="@+id/action_filter"
        android:icon="@drawable/filter"
        android:title="@string/filter_vacations"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
