<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent" android:id="@+id/register_form"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accountgegevens"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />

            <EditText
                android:id="@+id/telNr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionLabel="@string/next"
                android:singleLine="true"
                android:hint="@string/telNr"
                android:inputType="numberDecimal"
                android:digits="0123456789"
                android:background="@drawable/edittext_top_bg"
                android:padding="10dp"
                android:layout_marginTop="4dp"
                android:textColorHint="@color/loginHints"/>

            <EditText
                android:id="@+id/registreer_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionLabel="@string/next"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"
                android:background="@drawable/edittext_default_bg"
                android:layout_marginTop="-2dp"
                android:padding="10dp"
                android:textColorHint="@color/loginHints"/>

            <EditText
                android:id="@+id/registreer_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionLabel="@string/next"
                android:singleLine="true"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:background="@drawable/edittext_default_bg"
                android:layout_marginTop="-2dp"
                android:padding="10dp"
                android:textColorHint="@color/loginHints"/>

            <EditText
                android:id="@+id/bevestig_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:hint="@string/bevestig_password"
                android:background="@drawable/edittext_bottom_bg"
                android:layout_marginTop="-2dp"
                android:padding="10dp"
                android:layout_marginBottom="4dp"
                android:textColorHint="@color/loginHints"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gegevens_moeder"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />

            <EditText
                android:id="@+id/naam_moeder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionLabel="@string/next"
                android:hint="@string/lastname"
                android:singleLine="true"
                android:background="@drawable/edittext_top_bg"
                android:padding="10dp"
                android:layout_marginTop="4dp"
                android:textColorHint="@color/loginHints"/>

            <EditText
                android:id="@+id/voornaam_moeder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionLabel="@string/next"
                android:singleLine="true"
                android:hint="@string/firstname"
                android:background="@drawable/edittext_default_bg"
                android:layout_marginTop="-2dp"
                android:padding="10dp"
                android:textColorHint="@color/loginHints"/>

            <EditText
                android:id="@+id/rrn_moeder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionLabel="@string/next"
                android:singleLine="true"
                android:hint="@string/rrn"
                android:inputType="numberDecimal"
                android:digits="0123456789"
                android:background="@drawable/edittext_bottom_bg"
                android:layout_marginTop="-2dp"
                android:padding="10dp"
                android:layout_marginBottom="4dp"
                android:textColorHint="@color/loginHints"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gegevens_vader"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />

            <EditText
                android:id="@+id/naam_vader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionLabel="@string/next"
                android:singleLine="true"
                android:hint="@string/lastname"
                android:background="@drawable/edittext_top_bg"
                android:padding="10dp"
                android:layout_marginTop="4dp"
                android:textColorHint="@color/loginHints"/>

            <EditText
                android:id="@+id/voornaam_vader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionLabel="@string/next"
                android:singleLine="true"
                android:hint="@string/firstname"
                android:background="@drawable/edittext_default_bg"
                android:layout_marginTop="-2dp"
                android:padding="10dp"
                android:textColorHint="@color/loginHints"
                />

            <EditText
                android:id="@+id/rrn_vader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionLabel="@string/next"
                android:singleLine="true"
                android:hint="@string/rrn"
                android:inputType="numberDecimal"
                android:digits="0123456789"
                android:textColorHint="@color/loginHints"
                android:background="@drawable/edittext_bottom_bg"
                android:layout_marginTop="-2dp"
                android:padding="10dp"
                android:layout_marginBottom="4dp"/>

            <Button
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="0dp"
                android:text="@string/registreren"
                style="@style/DefaultButtonText"
                android:background="@drawable/button_default_bg"
                android:layout_marginTop="0dp"
                android:enabled="false"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
